# ClothingFaQTory

./: .env  .gitignore  CMakeLists.txt  ClothingFaQTory.pro  README.md  feedback.txt  resources.qrc
assets/: style.qss
core/: model.cpp  model.h
docs/: report.tex  schema.sql
models/: material.cpp  material.h  product.cpp  product.h  size.cpp  size.h
models/accessories/: accessory.cpp  accessory.h  backpack.cpp  backpack.h  bracelet.cpp  bracelet.h
models/clothing_items/: clothingitem.cpp  clothingitem.h  jeans.cpp  jeans.h  overalls.cpp  overalls.h  sweater.cpp  sweater.h  tshirt.cpp  tshirt.h
src/: log_handler.h  main.cpp  mainwindow.cpp  mainwindow.h
src/controllers/: controller.cpp  controller.h  main_controller.cpp  main_controller.h  search_controller.cpp  search_controller.h  wizard_controller.cpp  wizard_controller.h
src/core/: controller.cpp  controller.h  filters.cpp  filters.h  i_product_observer.h  i_product_visitor.h  iproduct_observer.h  iproduct_visitor.h  model.cpp  model.h  observer_interface.h  querybuilder.cpp  querybuilder.h  repository.h  view.cpp  view.h  visitor_interface.h
src/models/: fields_getter_visitor.cpp  fields_getter_visitor.h  material.cpp  material.h  model.cpp  model.h  product.cpp  product.h  size.cpp  size.h
src/services/: connectivity_manager.cpp  connectivity_manager.h  entity_mapper.cpp  entity_mapper.h  product_factory.cpp  product_factory.h
src/utils/: calculator.cpp  calculator.h
src/views/: filter_dialog.cpp  filter_dialog.h  info_dialog.cpp  info_dialog.h  info_dialog_visitor.cpp  info_dialog_visitor.h  main_view.cpp  main_view.h  mainwindow.cpp  mainwindow.h  materials_view.cpp  materials_view.h  no_connection.cpp  no_connection.h  observer_widget.cpp  observer_widget.h  observer_widget_view.cpp  observer_widget_view.h  product_menu.cpp  product_menu.h  product_type_button.cpp  product_type_button.h  product_view.cpp  product_view.h  products_view.cpp  products_view.h  search_dialog.cpp  search_dialog.h  search_view.cpp  search_view.h  view.cpp  view.h  view_interface.cpp  view_interface.h  widget_view_parent.cpp  (+1 more)
utils/: calculator.h
(+150 files in other folders)
